--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,4 +6,7 @@ COPY ../. /go/src/app
 RUN go get -d -v ./...
 RUN go install -v ./...
 
-CMD ["app/client.go"]
+EXPOSE 5001
+EXPOSE 5002
+
+CMD ["client"]
