--- a/helm/Values.yaml
+++ b/helm/Values.yaml
@@ -4,9 +4,11 @@ client:
   port: 5001
   rest:
     targetPort: 5002
-    port: 80
+    port: 5002
 
 server:
   image: "meow-server:1.0"
   targetPort: 5001
   port: 5001
+  path: localhost:443/meow-server
+  secretname: grpc-secret
