--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,11 @@
 FROM golang:1.16
 
 WORKDIR /go/src/app
-COPY ../. .
+COPY ../. /go/src/app
 
 RUN go get -d -v ./...
 RUN go install -v ./...
 
-CMD ["app/server.go"]
+EXPOSE 5001
+
+CMD ["server"]
