--- a/helm/templates/meow-server.yaml
+++ b/helm/templates/meow-server.yaml
@@ -15,6 +15,15 @@ spec:
       containers:
       - name: meow-server
         image: {{ .Values.server.image }}
+        env:
+          - name: JAEGER_AGENT_HOST
+            value: "jaeger-agent.default.svc.cluster.local"
+          - name: JAEGER_REPORTER_LOG_SPANS
+            value: "true"
+          - name: JAEGER_SAMPLER_TYPE
+            value: "const"
+          - name: JAEGER_SAMPLER_PARAM
+            value: "1"
         ports:
         - containerPort: {{ .Values.server.targetPort }}
 ---
